<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_act">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120.00dp"
            android:layout_height="130.000dp"
            android:src="@drawable/logo2"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_string"
                android:textColor="@color/white"
                android:textSize="24sp"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="27dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="21dp"
                    android:hint="@string/email_string"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    app:boxStrokeColor="@color/white"
                    app:endIconMode="clear_text">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="7dp"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        tools:ignore="LabelFor">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="21dp"
                    android:hint="@string/nama_lengkap_string"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    app:boxStrokeColor="@color/white">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="7dp"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        tools:ignore="LabelFor">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="21dp"
                    android:hint="@string/nim_string"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    app:boxStrokeColor="@color/white">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="7dp"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="12"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        tools:ignore="LabelFor">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="21dp"
                    android:hint="@string/jurusan_register"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    app:boxStrokeColor="@color/white">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="7dp"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        tools:ignore="LabelFor">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="21dp"
                    android:hint="@string/password_login"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    app:boxStrokeColor="@color/white"
                    app:errorEnabled="true"
                    app:helperText="Minimun 6 Char"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/white"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="7dp"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        tools:ignore="LabelFor">
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="47dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="99dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/button_back_reg"
                    tools:ignore="ContentDescription">
                </ImageButton>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/bentuk_tombol"
                    android:text="@string/daftar_string"
                    android:textColor="@color/color1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck">
                </Button>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>